[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-toolkit-yanranhan"
version = "0.1.0"
description = "A Python package for causal inference methods including ATE estimation, propensity score methods, and meta-learners"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Yanran Han"}
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "lightgbm>=3.3.0",
    "patsy>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

addopts = "-v"

[project.urls]
Homepage = "https://github.com/yanranhan95-create"